--- a/assets/style.css
+++ b/assets/style.css
@@ -109,9 +109,6 @@ body {
   height: 9.6px;
   left: 200px;
   top: 11px;
-  background: #c4c4c4;
+  background: #ab5e5e;
   border-radius: 12px;
-}
-
-.motivated {
 }
